# Skyulf

./: .codacy.yml  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyscanignore  .todo.md  CHANGELOG.md  CLA.md  CNAME  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  COPYRIGHT  COPYRIGHT.md  Dockerfile  LIBRARY_CREATED.md  LICENSE  Makefile  NOTICE  PRE_PUBLICATION_CHECKLIST.md  QUICKSTART.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  VERSION_UPDATE.md  __init__.py  _scratch_fix_b905.py  alembic.ini  analyze_codacy.py  analyze_high_severity.py  celery_worker.py  codacy_issues.json  codacy_results.json  config.py  dependencies.py  docker-compose.test.yml  (+30 more)
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  simple_fix.yml
.github/instructions/: changelog_discipline.instructions.md  codacy.instructions.md  coding_standards.instructions.md  comment_style.instructions.md  project_architecture.instructions.md  quality_checks.instructions.md  tech_stack_rules.instructions.md  testing_protocol.instructions.md
.github/scripts/: draft_release_from_changelog.py  run_check.sh  verify_skyulf_core_distribution.py
.github/workflows/: backend-tests.yml  ci.yml  codacy.yml  codeql-analysis.yml  codeql.yml  dco.yml  dependency-review.yml  docs.yml  frontend-tests.yml  labeler.yml  pr_check.yml  release-drafter.yml  release.yml  security.yml  skyulf-core-tests.yml
backend/: celery_app.py  config.py  dependencies.py  main.py
backend/config/: __init__.py  base.py  environments.py  factory.py
backend/data/: catalog.py
backend/data_ingestion/: dependencies.py  exceptions.py  router.py  serialization.py  service.py  tasks.py
backend/database/: __init__.py  adapter.py  async_connection_manager.py  async_init_db.py  async_migrate.py  async_registry.py  crud.py  engine.py  models.py  repository.py
backend/eda/: router.py  tasks.py
backend/exceptions/: __init__.py  (+2 more)
changelog/: 0.1.x.md  0.2.x.md  0.3.x.md  0.4.x.md  0.5.x.md  0.6.x.md  0.7.x.md
core/: celery_app.py  config.py  dependencies.py  main.py
docs/: ADDING_NEW_NODES_GUIDE.md  AUTOMATIC_SPLIT_DETECTION.md  BACKGROUND_EXECUTION_STATUS_INDICATORS.md  BACKGROUND_JOB_POLLING.md  BACKGROUND_PRELOAD_ON_SAVE.md  CELERY_REDIS_SETUP_GUIDE.md  DATA_PREVIEW_SPECIAL_CASE.md  EDGE_CONNECTIONS_IMPROVEMENTS.md  FEATURE_MATH_NODE_PLAN.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  LLM_MODEL_SWITCHING_GUIDE.md  MLOPS_PROJECT_EXTRACTION_PLAN.md  NODE_BACKGROUND_EXECUTION_LIST.md  QUICK_REFERENCE_SPLITS.md  QUICK_START_SPLIT_DETECTION.md  READY_TO_USE.md  SMART_SAMPLING_STRATEGY.md  SOLUTION_SUMMARY.md  TRANSFORMATION_NODES_AUTO_EXECUTION.md  architecture.md  data_architecture.md  index.md  ngi-zero-concept-note.md  performance.md  python_api.md
manual/: 404.html  architecture.html  data_architecture.html  index.html  objects.inv  performance.html  sitemap.xml
middleware/: __init__.py  error_handler.py  logging.py
migrations/: env.py  script.py.mako
schemas/: __init__.py  base.py  responses.py
scripts/: _debug_health_call.py  add_admin.py  add_progress_columns.py  clean_training_jobs.py  demo_quickstart.py  fix_whitespace.py  list_users.py  save-csv-fromimports.ipynb  temp_enqueue_job.py  test_pipeline_repro.py
site/: 404.html  architecture.html  data_architecture.html  index.html  objects.inv  performance.html  sitemap.xml
skyulf-core/: LICENSE  MANIFEST.in  README.md  docker-compose.test.yml  pyproject.toml  setup.py
skyulf-mlflow/: README.md  pyproject.toml  setup.py
temp/: REVIEW.md  SUMMARY.md  backend_abstraction_strategy.md
temp_artifacts/: _iqr_node.joblib  _outlier_node.joblib  _resample.joblib  _winsorize_node.joblib  _zscore_node.joblib
temp_artifacts_debug/: test_node_1.joblib  test_node_1_evaluation_data.joblib
temp_test_artifacts_full/: clean_city.joblib  clip_age.joblib  encode_cats.joblib  exec_clean_city_pipeline.joblib  exec_clip_age_pipeline.joblib  exec_encode_cats_pipeline.joblib  exec_impute_age_pipeline.joblib  exec_scale_income_pipeline.joblib  exec_select_features_pipeline.joblib  exec_splitter_pipeline.joblib  impute_age.joblib  loader.joblib  model.joblib  scale_income.joblib  splitter.joblib  unknown_evaluation_data.joblib
templates/: data_ingestion.html  example1.html  example2.html  exapmle.html  feature_canvas.html  index.html  login.html  ml_canvas.html  testing.html
testingdb/: add_source_id_column.py  check_all_sources.py  check_current_db.py  check_database.py  check_sqlite.py  clean_database.py  clear_databases.py  compare_admin_routes.py  create_test_data.py  manage_db.py  migrate_created_by.py  migrate_source_id.py  migrate_source_id_universal.py  monitor_deletion.py  verify_empty_databases.py  verify_migration.py
tests/: benchmark_pipeline.py  benchmark_preprocessing.py  check_overlap.py  compliance_suite.py  conftest.py  reproduce_branched_notebook.py  reproduce_eda_usage.py  reproduce_encoding_issue.py  reproduce_node_logic.py  reproduce_sentiment.py  reproduce_skyulfdataframe_integration.py  reproduce_vectorizer_stopwords.py  reproduce_vif_comparison.py  smoke_test_task9_e2e.py  split_handler_examples.py  test_admin_user.py  test_advanced_cleaning.py  test_api_integration.py  test_api_integration_job.py  test_artifact_routing.py  test_async_connection_manager_busy_timeout.py  test_async_data_sources_crud_extra.py  test_b4_f3.py  test_backend_catalog.py  test_backend_infra_fixes.py  test_backend_strategies.py  test_binning_comprehensive.py  test_binning_config.py  test_casting.py  test_catalog.py  test_cleaning.py  test_cleaning_nodes.py  test_complex_pipeline.py  test_config_centralized_caps.py  test_core_pipeline.py  test_cross_validation_all_methods.py  test_cv_basic_vs_advanced.py  test_cv_polars_final.py  test_data_ingestion.py  test_data_ingestion_router_fixes.py  (+119 more)
tmp_repro_artifacts/: branch_0.joblib  branch_1.joblib
(+2797 files in other folders)
