# © 2025 Murat Unsal — Skyulf Project

[project]
name = "skyulf"
version = "0.5.9"
description = "MLOps web application for privacy-preserving ML workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0,<4.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=1.36.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.4.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0,<6.0.0",
    "scikit-learn>=1.8.0",
    "imbalanced-learn>=0.12.0",
    "scipy>=1.10.0,<2.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "xgboost>=2.1.4",
    "lightgbm>=4.0.0",
    "optuna>=4.0,<5",
    "optuna-integration>=4.0,<5",
    "skyulf-core>=0.1.2",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
    "cmaes>=0.10",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0,<1.2.0",
    "shapely>=2.0.2,<2.2.0",
    "pyproj>=3.6.0,<3.8.0",
    "rtree>=1.3.0,<2.0.0",
    "libpysal>=4.10.0,<5.0.0",
    "esda>=2.5.0,<3.0.0",
]
auth = [
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1",
]
viz = [
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "plotly>=6.3.0",
]
nlp = [
    "langid>=1.1.6",
    "vadersentiment>=3.3.2",
    "rapidfuzz>=3.6.1",
]
all = [
    "skyulf[geo,auth,viz,nlp]",
    "beautifulsoup4>=4.13.5",
    "dask[complete]>=2024.8.0",
    "flower>=2.0.0,<3.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "kaggle>=1.7.4.5",
    "numba>=0.60.0",
    "openml>=0.15.1",
    "psutil>=5.9.0,<6.0.0",
    "psycopg2-binary>=2.9.10",
    "networkx>=3.4.2",
    "cookiecutter>=2.6.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    # Test stack
    "pytest>=7.4.0,<10.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",

    # Linters/formatters/typecheckers
    "black==24.10.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",

    # Dev helpers
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=19.0.0,<20.0.0",
    "pre-commit>=3.4.0",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["skyulf-core"] # Allow test imports from skyulf-core without needing to install it

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
  \.venv
  | site
  | exports
  | uploads
  | static
  | frontend
  | tmp_repro_artifacts
)/
'''

[tool.ty]
# Astral's Rust-based type checker. Replaces mypy in CI.
# See https://github.com/astral-sh/ty for full option reference.

[tool.ty.rules]
# Optional dependencies (s3fs, redis, xgboost, optuna, rich, matplotlib,
# vaderSentiment, causallearn, rapidfuzz) are guarded by try/except
# ImportError. They're present in some dev environments and missing in CI,
# so per-line `# ty: ignore[unresolved-import]` ignores would be flagged
# as unused locally and required in CI. Silence the unused-ignore noise.
unused-ignore-comment = "ignore"
# Same reasoning: locally we may pass `cast(Any, x)` against a value ty
# narrows to `Any`, which is a no-op locally but necessary on other ty
# versions / when imports differ.
redundant-cast = "ignore"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["skyulf-core"]

[tool.ty.src]
include = ["backend", "skyulf-core/skyulf", "skyulf-core/tests"]
exclude = [
    ".venv",
    "site",
    "exports",
    "uploads",
    "static",
    "frontend",
    "tmp_repro_artifacts",
    "build",
    "dist",
    "skyulf-core/skyulf/profiling/analyzer_backup.py",
]

[tool.uv.sources]
# Always use the local monorepo copy, never PyPI — prevents uv from
# resolving skyulf-core>=0.1.2 to the stale PyPI release (0.1.2) and
# overwriting the local editable install when `uv add` re-resolves.
skyulf-core = { path = "./skyulf-core", editable = true }
