# © 2025 Murat Unsal — Skyulf Project

[project]
name = "skyulf"
version = "0.6.6"
description = "MLOps web application for privacy-preserving ML workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.4,<4.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "numpy>=1.24.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0,<3.0.0",
    "polars>=1.36.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.4.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "python-multipart>=0.0.27",
    "redis>=5.0.0,<6.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "imbalanced-learn>=0.14.1,<1.0.0",
    "scipy>=1.10.0,<2.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "xgboost>=2.1.4",
    "lightgbm>=4.0.0",
    "optuna>=4.0,<5",
    "optuna-integration>=4.0,<5",
    "skyulf-core>=0.1.2",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
    "cmaes>=0.10",
    "causal-learn>=0.1.3.0",
    "boto3>=1.34.0",
    "s3fs>=2023.12.0",
    "patsy>=0.5.0,<1.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0.0",
    "xlsx2csv>=0.8.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.6.1,<4.0.0",
    "vadersentiment>=3.3.2,<4.0.0",
    "ty>=0.0.44",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
geo = [
    "geopandas>=1.1.2,<1.2.0",
    "shapely>=2.0.2,<2.2.0",
    "pyproj>=3.6.0,<3.8.0",
    "rtree>=1.3.0,<2.0.0",
    "libpysal>=4.10.0,<5.0.0",
    "esda>=2.5.0,<3.0.0",
]
auth = [
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1",
]
viz = [
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "plotly>=6.3.0",
]
nlp = [
    "langid>=1.1.6",
    "vadersentiment>=3.3.2",
    "rapidfuzz>=3.6.1",
]
all = [
    "skyulf[geo,auth,viz,nlp]",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    # Test stack
    "pytest>=7.4.0,<10.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "hypothesis>=6.100,<7.0.0",
    "syrupy>=4.0.0",
    "pytest-benchmark>=5.0.0,<6.0.0",

    # Linters/formatters/typecheckers
    "ruff>=0.8,<1.0",

    # Dev helpers
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=19.0.0,<20.0.0",
    "pre-commit>=3.4.0",
    "pre-commit-hooks>=4.6.0",  # Hygiene hooks run via python -m (avoids AppLocker-blocked .exe wrappers)
    "ipython>=8.18.1",
    "jupyter>=1.1.1",

    # Security scanners
    "pyscan-rs>=2.1.3",  # Rust-based dependency vulnerability scanner (OSV)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["skyulf-core"] # Allow test imports from skyulf-core without needing to install it
# Benchmarks (pytest-benchmark) are opt-in: skipped by default so normal runs
# stay fast. Run them explicitly with ``--benchmark-only``.
addopts = "--benchmark-skip"
markers = [
    "benchmark: performance benchmarks (opt-in; run with --benchmark-only)",
    "integration: requires a live backing service (e.g. Redis) — run via tests/docker/run_integration_tests.ps1|sh",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "site",
    "exports",
    "uploads",
    "static",
    "frontend",
    "tmp_repro_artifacts",
    "build",
    "dist",
]

[tool.ruff.lint]
# Conservative swap from flake8: same blocking surface (critical errors) plus
# import sorting (I). E501/line-length stays non-blocking — it was never in the
# flake8 blocking select. Expand rule classes (E, W, B, UP, ...) later if desired.
select = ["E9", "F63", "F7", "F82", "I"]
# E203 (whitespace before punctuation) is owned by the formatter. W503 has no Ruff
# equivalent (ruff-format handles line breaks around binary operators).
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
# E402 (module import not at top of file) is intentional in these files: routers
# append sys.path or set env vars before importing their dependencies;
# analyzer.py wraps optional sklearn/scipy/etc imports in try/except blocks.
"backend/ml_pipeline/deployment/api.py" = ["E402"]
"backend/ml_pipeline/execution/graph_utils.py" = ["E402"]
"backend/ml_pipeline/execution/schemas.py" = ["E402"]
"backend/ml_pipeline/model_registry/api.py" = ["E402"]
"backend/monitoring/router.py" = ["E402"]
"skyulf-core/skyulf/profiling/analyzer.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["skyulf", "backend"]

[tool.ruff.format]
# Black-compatible defaults; line-length inherited from [tool.ruff].

[tool.ty]
# Astral's Rust-based type checker. Replaces mypy in CI.
# See https://github.com/astral-sh/ty for full option reference.

[tool.ty.rules]
# Optional dependencies (s3fs, redis, xgboost, optuna, rich, matplotlib,
# vaderSentiment, causallearn, rapidfuzz) are guarded by try/except
# ImportError. They're present in some dev environments and missing in CI,
# so per-line `# ty: ignore[unresolved-import]` ignores would be flagged
# as unused locally and required in CI. Silence the unused-ignore noise.
unused-ignore-comment = "ignore"
# Same reasoning: locally we may pass `cast(Any, x)` against a value ty
# narrows to `Any`, which is a no-op locally but necessary on other ty
# versions / when imports differ.
redundant-cast = "ignore"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["skyulf-core"]

[tool.ty.src]
include = ["backend", "skyulf-core/skyulf", "skyulf-core/tests"]
exclude = [
    ".venv",
    "site",
    "exports",
    "uploads",
    "static",
    "frontend",
    "tmp_repro_artifacts",
    "build",
    "dist",
    "skyulf-core/skyulf/profiling/analyzer_backup.py",
]

[tool.uv]
required-version = ">=0.6,<1.0"

[tool.uv.sources]
skyulf-core = { workspace = true }

[tool.uv.workspace]
members = [
    "skyulf-core",
]

[tool.bandit]
# Bandit B101 (assert_used) flags every `assert`. In pytest suites `assert` is the
# idiomatic, correct construct, so we exclude test trees from Bandit entirely.
exclude_dirs = ["tests", "skyulf-core/tests", "temp", ".venv", "node_modules", "frontend"]

[tool.bandit.assert_used]
# Belt-and-suspenders: even if a test file is scanned outside the excluded dirs
# (e.g. conftest.py or a stray *_test.py), do not report asserts there.
skips = ["*/tests/*", "*_test.py", "*test_*.py", "*/conftest.py"]
